syntax = "proto3";

package packet;

import "google/protobuf/empty.proto";
import "google/protobuf/descriptor.proto";

option go_package = ".;packet";

service Say {
  option (oauth_scopes) = 
    "https://www.googleapis.com/auth/cloud-platform,"
    "https://www.googleapis.com/auth/monitoring";

  rpc Hello (HelloRequest) returns (HelloResponse) {
    option (method_signature) = "resource_name";
  }
  rpc Ping (google.protobuf.Empty) returns (PingResponse);
}

message HelloRequest {
  string msg = 1;
}

message HelloResponse {
  string msg = 1;
}

message PingResponse {
  int64 ts = 1;
}

extend google.protobuf.MethodOptions {
  repeated string method_signature = 1051;
}
extend google.protobuf.ServiceOptions {
  repeated string oauth_scopes = 1050;
}